Fix: visualization offset stretch

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -24,7 +24,6 @@
     position: relative;
     width: 740px;
     height: 300px;
-    margin-left: -100px;
 }
 
 #visualizerCanvas {
